// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog/> Content should render correctly. 1`] = `
<div
  className="contentsPositionClassName"
  tabIndex={0}
>
  <div
    className="contentsClassName"
  >
    <div
      className="titleClassName"
    >
      Foo title
    </div>
    <div
      className="bodyClassName errorClassName dialog__body"
    >
      Foo children
    </div>
    <div
      className="actionsClassName"
    >
      <span
        key="0/.0"
      >
        Foo 1
      </span>
      <span
        key="1/.1"
      >
        Foo 2
      </span>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> Portal should render correctly. 1`] = `
<Portal
  containerInfo={<body />}
>
  <section
    autoFocus={true}
    className="dialogClassName wideClassName errorClassName"
    onClick={[Function]}
    role="dialog"
    tabIndex={0}
  >
    <div
      className="contentsPositionClassName"
      tabIndex={0}
    >
      <div
        className="contentsClassName"
      >
        <div
          className="titleClassName"
        >
          Foo title
        </div>
        <div
          className="bodyClassName errorClassName dialog__body"
        >
          Foo children
        </div>
        <div
          className="actionsClassName"
        >
          <span
            key="0/.0"
          >
            Foo 1
          </span>
          <span
            key="1/.1"
          >
            Foo 2
          </span>
        </div>
      </div>
    </div>
  </section>
</Portal>
`;
